fix invert issues when using dark mode

--- a/Lyra_UI/css/Lyra_UI.css
+++ b/Lyra_UI/css/Lyra_UI.css
@@ -410,6 +410,10 @@
         .actions .navBtn, .navBtn {
             color: white;
         }
+        .lyra-logo, .equal div {
+            filter: invert(1);
+        }
+        
         .content-blurred {
             background-color: rgba(20, 20, 20, 0.7);
         }
@@ -4707,8 +4711,7 @@ header:has(.nav-pane:not(.hidden)) .navigation {
     width: 37px;
     height: 2px;
     top: 0px;
-    background-color: white;
-    filter: invert(1);
+    background-color: black;
     transition: all .4s cubic-bezier(1, 0, 0, 1);
 }
 
@@ -4719,7 +4722,6 @@ header:has(.nav-pane:not(.hidden)) .navigation {
     width: 22px;
 }
 .hamburger.active .equal div {
-    filter: invert(0);
     width: 37px !important;
 }
 .hamburger.active .equal .div1 {
